--- a/filmer/Indiana-jones5.html
+++ b/filmer/Indiana-jones5.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min filmsida</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>
@@ -19,5 +19,11 @@
         för att stoppa nazistskurken Voller från att resa i tiden och ändra på historien 
         under andra världskriget.
     </p>
+
+    <p> 
+        Filmen släpptes år 2023 och är i grunden gjord av Lucas film.
+    </p>
+
+    <img class="jones" src="../jones.jpg" alt="Indiana Jones">
 </body>
 </html>
