--- a/filmer/baby-driver.html
+++ b/filmer/baby-driver.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min filmsida</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>
@@ -19,5 +19,10 @@
         Men när han möter sina drömmars flicka, försöker han sluta med sin kriminella verksamhet.
     </p>
     
+    <p> 
+        Filmen släpptes år 2017 av produktionsbolagen Media Rights Capital och Big Talk Productions.
+    </p>
+
+    <img class="bank" src="../bank.jpg" alt="Bankrånet från Baby Driver">
 </body>
 </html>
