--- a/filmer/thelegoninjagomovie.html
+++ b/filmer/thelegoninjagomovie.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min filmsida</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>
@@ -20,5 +20,11 @@
         Tillsammans och ledda av kung fu-mästaren Wu måste de besegra den ondskefulle krigsherren 
         Garmadon - den värste killen nånsin!
     </p>
+
+    <p>
+        Filmen släpptes år 2017 och är i grunden gjord av Warner Bros. Entertainment Inc.
+    </p>
+
+    <img class="lego" src="../lego.jpg" alt="Lego karaktär">
 </body>
 </html>
