--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>
+
+    <h1 class="intro">
         Min filmsida
     </h1>
 
-    <p>
-        Här är tre trevliga filmer som du säkert skulle vilja se snart.
-    </p>
+    <h4>
+        Här är tre trevliga filmer som du säkert skulle vilja se inom en kort tid. 
+    </h4>
 
-    <a href="/filmer/baby-driver.html"><img src="babydriver2017.jpg" alt="Baby Driver">:</a>
+    <h4>
+        Baby Driver, Indiana Jones 5 och The Lego Ninjago Movie
+    </h4>
 
-    <a href="/filmer/Indiana-jones5.html"><img src="indianajones5.jpg" alt="Indiana Jones 5">:</a>
+    <a href="/filmer/baby-driver.html"><img class="img" src="babydriver2017.jpg" alt="Baby Driver">:</a>
 
-    <a href="/filmer/thelegoninjagomovie.html"><img src="thelegoninjagomovie.jpg" alt="The Lego Ninjago Movie">:</a>
+    <a href="/filmer/Indiana-jones5.html"><img class="img" src="indianajones5.jpg" alt="Indiana Jones 5">:</a>
+
+    <a href="/filmer/thelegoninjagomovie.html"><img class="img" src="thelegoninjagomovie.jpg" alt="The Lego Ninjago Movie">:</a>
+
 </body>
 </html>
