--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    
     <h1 class="intro">
         Min filmsida
     </h1>
@@ -21,11 +21,14 @@
         Baby Driver, Indiana Jones 5 och The Lego Ninjago Movie
     </h4>
 
-    <a href="/filmer/baby-driver.html"><img class="img" src="babydriver2017.jpg" alt="Baby Driver">:</a>
+    <a href="/filmer/baby-driver.html"><img class="img" src="babydriver2017.jpg" alt="Baby Driver"><a>
 
-    <a href="/filmer/Indiana-jones5.html"><img class="img" src="indianajones5.jpg" alt="Indiana Jones 5">:</a>
+    <a href="/filmer/Indiana-jones5.html"><img class="img" src="indianajones5.jpg" alt="Indiana Jones 5"><a>
 
-    <a href="/filmer/thelegoninjagomovie.html"><img class="img" src="thelegoninjagomovie.jpg" alt="The Lego Ninjago Movie">:</a>
+    <a href="/filmer/thelegoninjagomovie.html"><img class="img" src="thelegoninjagomovie.jpg" alt="The Lego Ninjago Movie"><a>
 
+    <h2>
+        ----------------------------------------------------------------- Tryck på valfri film ovan för att få veta mer -----------------------------------------------------------------
+    </h2>
 </body>
 </html>
